--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -332,6 +332,8 @@ crypto_libbitcoin_crypto_a_SOURCES = \
   crypto/ripemd160.h \
   crypto/sph_blake.h \
   crypto/sph_bmw.h \
+  crypto/sph_hamsi.h \
+  crypto/sph_fugue.h \
   crypto/sph_groestl.h \
   crypto/sph_jh.h \
   crypto/sph_keccak.h \
@@ -339,6 +341,8 @@ crypto_libbitcoin_crypto_a_SOURCES = \
   crypto/sph_types.h \
   crypto/sph_luffa.h \
   crypto/sph_haval.h \
+  crypto/sph_sha2.h \
+  crypto/shabal.h \
   crypto/luffa.c \
   crypto/sph_cubehash.h \
   crypto/cubehash.c \
@@ -349,6 +353,7 @@ crypto_libbitcoin_crypto_a_SOURCES = \
   crypto/sph_echo.h \
   crypto/echo.c \
   crypto/shabal.c \
+  crypto/sph_whirlpool.h \
   crypto/whirlpool.c \
   crypto/haval.c \
   crypto/hamsi.c \
