uses remote repos

--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -29,8 +29,7 @@ packages:
 - "python3-setuptools"
 - "fonts-tuffy"
 remotes:
-#- "url": "https://github.com/zimbora/dsw.git" use it later on
-- "url": "/home/jsilva/dsw"
+- "url": "https://github.com/zimbora/dsw.git"
   "dir": "dsw"
 files:
 - "MacOSX10.11.sdk.tar.gz"
