--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -33,8 +33,7 @@ packages:
 - "ca-certificates"
 - "python3"
 remotes:
-#- "url": "https://github.com/zimbora/dsw.git" use it later on
-- "url": "/home/jsilva/dsw"
+- "url": "https://github.com/zimbora/dsw.git"
   "dir": "dsw"
 files: []
 script: |
