--- a/contrib/gitian-descriptors/gitian-linux2.yml
+++ b/contrib/gitian-descriptors/gitian-linux2.yml
@@ -122,7 +122,7 @@ script: |
   #make clean
   ./autogen.sh
   ./configure --enable-glibc-back-compat --prefix=$(pwd)/depends/x86_64-pc-linux-gnu LDFLAGS="-static-libstdc++" --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --disable-bench --with-pic --enable-upnp-default CPPFLAGS="-fPIC -O3" CXXFLAGS="-fPIC -O3"
-  make -j $(nproc) HOST=x86_64-pc-linux-gnu #uncomment
+  make -j $(nproc) HOST=x86_64-pc-linux-gnu
 
   #CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=/ --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS} CFLAGS="${HOST_CFLAGS}" CXXFLAGS="${HOST_CXXFLAGS}" LDFLAGS="${HOST_LDFLAGS}"
   #make ${MAKEOPTS}
