--- a/contrib/gitian-descriptors/gitian-arm64.yml
+++ b/contrib/gitian-descriptors/gitian-arm64.yml
@@ -105,7 +105,7 @@ script: |
   cd ..
 
   #cd dsw
-  BASEPREFIX=`pwd`/depends
+  #BASEPREFIX=`pwd`/depends
   # Build dependencies for each host
   #for i in $HOSTS; do
   #  make ${MAKEOPTS} -C ${BASEPREFIX} HOST="${i}"
@@ -134,7 +134,7 @@ script: |
   #rm -rf ${DISTNAME}/lib/pkgconfig
   #cd ..
 
-  strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
+  #strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
   mkdir -p deploy/arm64
   cp src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt deploy/arm64/
   cd deploy/arm64
