--- a/contrib/gitian-descriptors/gitian-linux64.yml
+++ b/contrib/gitian-descriptors/gitian-linux64.yml
@@ -127,20 +127,20 @@ script: |
 
   # Create the release tarball
   #make clean
-  ./autogen.sh
-  ./configure --enable-glibc-back-compat --prefix=$(pwd)/depends/x86_64-pc-linux-gnu LDFLAGS="-static-libstdc++" --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --disable-bench --with-pic --enable-upnp-default CPPFLAGS="-fPIC -O3" CXXFLAGS="-fPIC -O3"
-  make -j $(nproc) HOST=x86_64-pc-linux-gnu
+  #./autogen.sh
+  #./configure --enable-glibc-back-compat --prefix=$(pwd)/depends/x86_64-pc-linux-gnu LDFLAGS="-static-libstdc++" --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --disable-bench --with-pic --enable-upnp-default CPPFLAGS="-fPIC -O3" CXXFLAGS="-fPIC -O3"
+  #make -j $(nproc) HOST=x86_64-pc-linux-gnu
 
-  #CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=/ --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS} CFLAGS="${HOST_CFLAGS}" CXXFLAGS="${HOST_CXXFLAGS}" LDFLAGS="${HOST_LDFLAGS}"
-  #make ${MAKEOPTS}
+  CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=/ --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS} CFLAGS="${HOST_CFLAGS}" CXXFLAGS="${HOST_CXXFLAGS}" LDFLAGS="${HOST_LDFLAGS}"
+  make ${MAKEOPTS}
   #make ${MAKEOPTS} -C src check-security
   #make ${MAKEOPTS} -C src check-symbols
   #make install DESTDIR=${INSTALLPATH}
-  #cd installed
-  #find . -name "lib*.la" -delete
-  #find . -name "lib*.a" -delete
-  #rm -rf ${DISTNAME}/lib/pkgconfig
-  #cd ..
+  cd installed
+  find . -name "lib*.la" -delete
+  find . -name "lib*.a" -delete
+  rm -rf ${DISTNAME}/lib/pkgconfig
+  cd ..
 
   strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
   mkdir -p deploy/linux64
