--- a/contrib/gitian-descriptors/gitian-linux64.yml
+++ b/contrib/gitian-descriptors/gitian-linux64.yml
@@ -131,11 +131,12 @@ script: |
   #./configure --enable-glibc-back-compat --prefix=$(pwd)/depends/x86_64-pc-linux-gnu LDFLAGS="-static-libstdc++" --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --disable-bench --with-pic --enable-upnp-default CPPFLAGS="-fPIC -O3" CXXFLAGS="-fPIC -O3"
   #make -j $(nproc) HOST=x86_64-pc-linux-gnu
 
+  ./autogen.sh
   CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=/ --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS} CFLAGS="${HOST_CFLAGS}" CXXFLAGS="${HOST_CXXFLAGS}" LDFLAGS="${HOST_LDFLAGS}"
   make ${MAKEOPTS}
   #make ${MAKEOPTS} -C src check-security
   #make ${MAKEOPTS} -C src check-symbols
-  #make install DESTDIR=${INSTALLPATH}
+  make install DESTDIR=${INSTALLPATH}
   cd installed
   find . -name "lib*.la" -delete
   find . -name "lib*.a" -delete
