--- a/contrib/gitian-descriptors/gitian-linux64.yml
+++ b/contrib/gitian-descriptors/gitian-linux64.yml
@@ -47,6 +47,9 @@ script: |
   FAKETIME_PROGS="date ar ranlib nm"
   export TZ="UTC"
   export BUILD_DIR="$PWD"
+  HOST_CFLAGS="-O2 -g"
+  HOST_CXXFLAGS="-O2 -g"
+  HOST_LDFLAGS=-static-libstdc++
 
   mkdir -p ${WRAP_DIR}
   if test -n "$GBUILD_CACHE_ENABLED"; then
@@ -118,6 +121,7 @@ script: |
       export HOST_ID_SALT="$EXTRA_INCLUDES"
     fi
     make ${MAKEOPTS} -C ${BASEPREFIX} HOST="${i}"
+    unset HOST_ID_SALT
   done
 
   # Faketime for binaries
