--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -187,7 +187,7 @@ script: |
     #cp ../README.md ${DISTNAME}/
     #cp ../params/install-params.sh ${DISTNAME}/
 
-    FILENAMES=$(find ${BASE_NAME}* -not -name "*.dbg" | sort)
+    FILENAMES=$(find ${BASE_NAME}*/bin/${BASE_NAME}* -not -name "*.dbg" | sort)
     for i in ${FILENAMES}; do
       echo ${i} | tar --mtime="$REFERENCE_DATETIME" --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ${OUTDIR}/${i}-linux64.tar.gz
     done
