--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -159,7 +159,7 @@ script: |
   #popd
 
   # Workaround for tarball not building with the bare tag version (prep)
-  make -C src obj/build.h
+  #make -C src obj/build.h
 
   ORIGPATH="$PATH"
   # Extract the release tarball into a dir for each host and build
