--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -173,8 +173,8 @@ script: |
 
     # Workaround for tarball not building with the bare tag version
     echo '#!/bin/true' > ../share/genbuild.sh
-    mkdir src/obj
-    cp ../src/obj/build.h src/obj/
+    #mkdir src/obj
+    #cp ../src/obj/build.h src/obj/
 
     CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=/ --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS} CFLAGS="${HOST_CFLAGS}" CXXFLAGS="${HOST_CXXFLAGS}" LDFLAGS="${HOST_LDFLAGS}"
     make ${MAKEOPTS}
