--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -144,22 +144,19 @@ script: |
   # Create the release tarball using (arbitrarily) the first host
   #git update-index --assume-unchanged src/chiabls/contrib/relic/include/relic_conf.h.in
   ./autogen.sh
-
-  #CONFIG_SITE=${BASEPREFIX}/$(echo "${HOSTS}" | awk '{print $1;}')/share/config.site ./configure --prefix=/
-  #make dist
-
+  CONFIG_SITE=${BASEPREFIX}/$(echo "${HOSTS}" | awk '{print $1;}')/share/config.site ./configure --prefix=/
+  make dist
   SOURCEDIST=$(echo __decenomy__-*.tar.gz)
   DISTNAME=${SOURCEDIST/%.tar.gz}
-
   # Correct tar file order
-  #mkdir -p temp
-  #pushd temp
-  #tar -xf ../$SOURCEDIST
-  #find __decenomy__-* | sort | tar --mtime="$REFERENCE_DATETIME" --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ../$SOURCEDIST
-  #popd
+  mkdir -p temp
+  pushd temp
+  tar -xf ../$SOURCEDIST
+  find __decenomy__-* | sort | tar --mtime="$REFERENCE_DATETIME" --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ../$SOURCEDIST
+  popd
 
   # Workaround for tarball not building with the bare tag version (prep)
-  #make -C src obj/build.h
+  make -C src obj/build.h
 
   ORIGPATH="$PATH"
   # Extract the release tarball into a dir for each host and build
@@ -169,19 +166,18 @@ script: |
     cd distsrc-${i}
     INSTALLPATH="${PWD}/installed/${DISTNAME}"
     mkdir -p ${INSTALLPATH}
-    #tar --strip-components=1 -xf ../$SOURCEDIST
+    tar --strip-components=1 -xf ../$SOURCEDIST
 
     # Workaround for tarball not building with the bare tag version
     echo '#!/bin/true' > ../share/genbuild.sh
-    #mkdir src/obj
-    #cp ../src/obj/build.h src/obj/
+    mkdir src/obj
+    cp ../src/obj/build.h src/obj/
 
-    ./autogen.sh
     CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=/ --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS} CFLAGS="${HOST_CFLAGS}" CXXFLAGS="${HOST_CXXFLAGS}" LDFLAGS="${HOST_LDFLAGS}"
     make ${MAKEOPTS}
     make ${MAKEOPTS} -C src check-security
     make ${MAKEOPTS} -C src check-symbols
-    #make install DESTDIR=${INSTALLPATH}
+    make install DESTDIR=${INSTALLPATH}
     cd installed
     find . -name "lib*.la" -delete
     find . -name "lib*.a" -delete
