--- a/contrib/gitian-descriptors/gitian-arm64.yml
+++ b/contrib/gitian-descriptors/gitian-arm64.yml
@@ -44,6 +44,7 @@ script: |
   WRAP_DIR=$HOME/wrapped
   FAKETIME_HOST_PROGS="gcc g++"
   FAKETIME_PROGS="date ar ranlib nm"
+  export QT_RCC_SOURCE_DATE_OVERRIDE=1
   export TZ="UTC"
   export BUILD_DIR="$PWD"
 
@@ -98,17 +99,12 @@ script: |
   done
 
   # Build dependencies
-  #cd dsw
-  #BASEPREFIX="${PWD}/depends"
-  #cd depends
-  #make -j $(nproc) HOST=aarch64-linux-gnu
-  #cd ..
-
-  cd dsw
-  BASEPREFIX=`pwd`/depends
-  # Build dependencies for each host
   for i in $HOSTS; do
-    make ${MAKEOPTS} -C ${BASEPREFIX} HOST="${i}"
+    cd dsw
+    BASEPREFIX="${PWD}/depends"
+    cd depends
+    make -j $(nproc) HOST=${i}
+    cd ..
   done
 
   # Faketime for binaries
@@ -117,24 +113,15 @@ script: |
   create_per-host_faketime_wrappers "${REFERENCE_DATETIME}"
   export PATH=${WRAP_DIR}:${PATH}
 
-  # Create the release tarball
-  make clean
-  ./autogen.sh
-  ./configure --prefix=$(pwd)/depends/aarch64-linux-gnu --disable-debug --disable-tests --disable-bench --enable-upnp-default CFLAGS="-O3" CXXFLAGS="-O3"
-  make -j $(nproc) HOST=aarch64-linux-gnu
+  for i in $HOSTS; do
+    # Create the release tarball
+    #make clean
+    ./autogen.sh
+    ./configure --prefix=$(pwd)/depends/${i} --disable-debug --disable-tests --disable-bench --enable-upnp-default CFLAGS="-O3" CXXFLAGS="-O3"
+    make -j $(nproc) HOST=${i}
+  done
 
-  #CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=/ --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS} CFLAGS="${HOST_CFLAGS}" CXXFLAGS="${HOST_CXXFLAGS}" LDFLAGS="${HOST_LDFLAGS}"
-  #make ${MAKEOPTS}
-  #make ${MAKEOPTS} -C src check-security
-  #make ${MAKEOPTS} -C src check-symbols
-  #make install DESTDIR=${INSTALLPATH}
-  #cd installed
-  #find . -name "lib*.la" -delete
-  #find . -name "lib*.a" -delete
-  #rm -rf ${DISTNAME}/lib/pkgconfig
-  #cd ..
-
-  #strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
+  strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
   mkdir -p deploy/arm64
   cp src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt deploy/arm64/
   cd deploy/arm64
