--- a/contrib/gitian-descriptors/gitian-arm64.yml
+++ b/contrib/gitian-descriptors/gitian-arm64.yml
@@ -121,7 +121,7 @@ script: |
     make -j $(nproc) HOST=${i}
   done
 
-  strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
+  #strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
   mkdir -p deploy/arm64
   cp src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt deploy/arm64/
   cd deploy/arm64
