--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -114,12 +114,12 @@ script: |
 
   #strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
 
-  make osx_volname
-  make deploydir
-  OSX_VOLNAME="$(cat osx_volname)"
+  #make osx_volname
+  #make deploydir
+  #OSX_VOLNAME="$(cat osx_volname)"
 
   make deploy
-  ${WRAP_DIR}/dmg dmg "${OSX_VOLNAME}.dmg" ${OUTDIR}/${HOSTS}-osx64-unsigned.dmg
+  ${WRAP_DIR}/dmg dmg "${NAME}.dmg" ${OUTDIR}/${HOSTS}-osx64-unsigned.dmg
 
   mkdir -p deploy/macos
   cp src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt ${NAME}-Core.dmg deploy/macos/
