--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -116,28 +116,9 @@ script: |
 
   #strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
 
-  make osx_volname
-  make deploydir
-  OSX_VOLNAME="$(cat osx_volname)"
-  mkdir -p unsigned-app-${i}
-  cp osx_volname unsigned-app-${i}/
-  cp contrib/macdeploy/detached-sig-apply.sh unsigned-app-${i}
-  cp contrib/macdeploy/detached-sig-create.sh unsigned-app-${i}
-  cp ${BASEPREFIX}/${i}/native/bin/dmg ${BASEPREFIX}/${i}/native/bin/genisoimage unsigned-app-${i}
-  cp ${BASEPREFIX}/${i}/native/bin/${i}-codesign_allocate unsigned-app-${i}/codesign_allocate
-  cp ${BASEPREFIX}/${i}/native/bin/${i}-pagestuff unsigned-app-${i}/pagestuff
-  mv dist unsigned-app-${i}
-  pushd unsigned-app-${i}
-  find . | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ${OUTDIR}/${DISTNAME}-osx-unsigned.tar.gz
-  popd
-
-  make deploy HOST=${HOSTS}
-  BASE_DIR = $(pwd)
-  echo $(pwd)
-  ls
-  ${WRAP_DIR}/dmg dmg "${BASE_DIR}/${OSX_VOLNAME}.dmg" ${OUTDIR}/${DISTNAME}-osx-unsigned.dmg
-
+  #make deploy HOST=${HOSTS}
   mkdir -p deploy/macos
+
   cp src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt ${NAME}-Core.dmg deploy/macos/
   cd deploy/macos
 
