--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -28,7 +28,7 @@ packages:
 - "python3-dev"
 - "python3-setuptools"
 - "fonts-tuffy"
-- "libdb++-dev"
+- "libdb4.8++-dev"
 remotes:
 #- "url": "https://github.com/zimbora/dsw.git" use it later on
 - "url": "/home/jsilva/dsw-test"
